# Delphi-Self-Improving-Multi-Agent-Decision-Intelligence-Platform

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
app/: main.py
app/agents/: expert.py  schemas.py
app/analytics/: schemas.py  service.py
app/api/v1/: analytics.py  decisions.py  health.py  router.py
app/consensus/: schemas.py  service.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
app/council/: schemas.py  service.py
app/database/: base.py  init_db.py  session.py
app/debate/: schemas.py  service.py
app/domain/: schemas.py  service.py
app/judge/: schemas.py  service.py
app/models/: __init__.py  case.py  expert.py  participation.py  reflection.py  reputation_history.py  success_pattern.py
app/reflection/: schemas.py  service.py
app/reputation/: service.py
app/router/: schemas.py  service.py
app/services/: decision_orchestrator.py  expert_seeder.py  llm.py
evaluations/: dataset.json  evaluate.py  generate_dataset.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/api/: client.js
frontend/src/components/: ConfidenceRing.jsx  (+12 more)
prompts/: clerk_stenographer.md  consensus.md  domain_specialist.md  expert_analysis.md  judge_challenge.md  judge_rubric.md  router.md
tests/: conftest.py
tests/integration/: test_decisions_api.py  test_migrations.py
tests/unit/: test_analytics.py  test_consensus.py  test_health.py  test_recovery.py  test_reflection.py  test_reputation.py  test_router.py
(+17 files in other folders)
